<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="337dp"
        android:fontFamily="@font/gothambold"
        android:text="@string/back"
        android:textColor="@color/edit_text_text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_arrow"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/back_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_path"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/username_textview"
        app:fontFamily="@font/gothambold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="287dp"
        android:fontFamily="@font/gothambold"
        android:text="@string/username"
        android:textColor="@color/white_text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username_edit_text"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/gothambook"
        android:inputType="textPersonName"
        android:textColor="@color/edit_text_text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textview" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView2"
        app:fontFamily="@font/gothambold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="287dp"
        android:fontFamily="@font/gothambold"
        android:text="@string/username"
        android:textColor="@color/white_text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/edit_text_text_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="313dp"
        app:fontFamily="@font/gothambold"
        android:textColor="@color/white_text_color"
        android:text="@string/password"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_password"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/edit_text_text_color"

        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/repeat_password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="310dp"
        android:text="@string/repeat_password"
        android:textColor="@color/white_text_color"
        app:fontFamily="@font/gothambold"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_repeat_password"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:textColor="@color/edit_text_text_color"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_button"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:background="@drawable/button_background_yellow"
        android:textColor="@color/black"
        android:fontFamily="@font/gothambold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_repeat_password" />


</androidx.constraintlayout.widget.ConstraintLayout>