<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gdEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="start|top"
            android:layout_marginTop="4dp"
            android:background="@color/black"
            android:src="@drawable/ic_path"
            app:layout_constraintStart_toStartOf="@id/gdStart"
            app:layout_constraintTop_toTopOf="@id/gdTop" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="314dp"
            android:layout_height="390dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toTopOf="@+id/gdTop"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/frame_for_image" />

        <TextView
            android:id="@+id/BackTextView"
            android:layout_width="59dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/gothambold"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/edit_text_text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/gdTop" />


        <ImageView
            android:id="@+id/imgFromServer"
            android:layout_width="269dp"
            android:layout_height="335dp"
            app:layout_constraintBottom_toBottomOf="@+id/surnameTextView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.288" />

        <TextView
            android:id="@+id/NameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="37sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/surnameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/gothambook"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/NameTextView"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/removeAndSaveButton"
            android:layout_width="156dp"
            android:layout_height="36dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background_yellow"
            android:text="SAVE"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/nickNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="NICKNAME"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/removeAndSaveButton" />

        <TextView
            android:id="@+id/occupationFirstTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="20dp"

            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/nickNameTextView" />

        <TextView
            android:id="@+id/occupationSecondTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"

            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/occupationFirstTextView" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="DETAILS"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/occupationSecondTextView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gothammedium"
            android:text="@string/birthday"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gothammedium"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gothammedium"
            android:text="@string/protrayed"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/birthDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gothammedium"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gothammedium"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/birthDayTextView" />

        <TextView
            android:id="@+id/protrayedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gothammedium"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/statusTextView" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/gothambold"
            android:text="APPERANCES"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />


>        <LinearLayout
        android:id="@+id/episodesContainer"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/textView17"/>

        <TextView
            android:id="@+id/quotesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/quotes"
            android:fontFamily="@font/gothambold"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/gdEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdStart"
            app:layout_constraintTop_toBottomOf="@+id/episodesContainer" />

        <LinearLayout
            android:id="@+id/quotesContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/gdEnd"
            app:layout_constraintStart_toStartOf="@id/gdStart"
            app:layout_constraintTop_toBottomOf="@id/quotesTextView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



